--- a/src/app/surgery-calendar/surgery-calendar.component.html
+++ b/src/app/surgery-calendar/surgery-calendar.component.html
@@ -1,3 +1,4 @@
+<mat-spinner *ngIf="loader"></mat-spinner>
 <div class="container-fluid" style="padding: 0px 80px 60px 80px;" dir="rtl">
     <div class="row text-center">
         <div class="col-md-4">
