--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/manage-single-surgery/manage-single-surgery.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/manage-single-surgery/manage-single-surgery.component.html
@@ -35,7 +35,7 @@
                     <input matInput formControlName="PM_LAST_NAME">
                 </mat-form-field>
             </div>
-            <div class="col-1">
+            <div class="col-2">
                 <mat-form-field style="line-height: 30px;">
                     <mat-label>מגדר</mat-label>
                     <mat-select formControlName="PM_PATIENT_GENDER">
@@ -45,18 +45,18 @@
                     <!-- <input matInput formControlName="PM_PATIENT_GENDER"> -->
                 </mat-form-field>
             </div>
-            <div class="col-1">
+            <div class="col-2">
                 <mat-form-field>
                     <mat-label>גיל</mat-label>
                     <input matInput type="number" step="0.1" formControlName="PM_DOB">
                 </mat-form-field>
             </div>
-            <div class="col-2">
+            <!-- <div class="col-2">
                 <mat-form-field>
                     <mat-label>מחלקה</mat-label>
                     <input matInput formControlName="PM_MOVE_DEPART_SEODE">
                 </mat-form-field>
-            </div>
+            </div> -->
         </div>
         <hr>
         <div class="row surgery-details">
@@ -215,7 +215,16 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-
+        </div>
+        <div class="row surgery-details">
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>הערה כללית</mat-label>
+                <mat-select formControlName="SurgeryNote">
+                    <mat-option *ngFor="let nt of surgeryNotes" [value]="nt.Row_ID">
+                        {{nt.Description}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
         </div>
         <div class="row-btn">
             <div class="exists-info" *ngIf="patientsList.length != 0 && patientsList[0].ArrivalDate != ''">
