--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
@@ -25,18 +25,18 @@
       <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'he' }}</h3>
     </div>
     <div class="col-md-4">
-      <ul>
-        <li>Completed</li>
-        <li>InProgress</li>
-        <li>Planned</li>
-        <li>Canceled</li>
+      <ul class="list">
+        <li style="color: #0ef12f;">Completed</li>
+        <li style="color: #e8abf1;">InProgress</li>
+        <li style="color: #abeff1;">Planned</li>
+        <li style="color: #f10e0e;">Canceled</li>
       </ul>
     </div>
   </div>
   <br />
   <div class="row">
     <div class="col text-center" *ngFor="let room of specificRooms">
-      <b>{{room.SurgeryRoom}}</b>
+      <button mat-raised-button class="rooms-btn" (click)="showSummaryReport(room)">{{room.SurgeryRoom}}</button>
       <div [ngSwitch]="view">
         <mwl-calendar-day-view *ngSwitchCase="CalendarView.Day" [viewDate]="viewDate" [dayStartHour]="6"
           [events]="room.Surgeries" [locale]="locale" [refresh]="refresh"
