--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/summary-dialog.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/summary-dialog.html
@@ -1,31 +1,32 @@
-<h1 mat-dialog-title class="text-center">{{data.room.SurgeryRoom}}</h1>
-<div mat-dialog-content dir="rtl" class="text-center">
-    מספר ניתוחים: {{data.room.NumberOfSurgeries}}
-    <table class="table text-right">
-        <tr>
-            <th>שם ניתוח</th>
-            <th>זמן התחלה</th>
-            <th>זמן סיום</th>
-            <th>משך ניתוח</th>
-            <th>סטטוס</th>
-        </tr>
-        <tr *ngFor="let su of data.room.Surgeries">
-            <td>{{su.SurgeryServicesName.S_SERVICE_VAL}}</td>
-            <td>{{su.ArrivalTime}}</td>
-            <td>{{su.EndTime}}</td>
-            <td>test</td>
-            <td>test</td>
-        </tr>
-    </table>
-    <!-- <ul>
-        <li>
-            <span *ngIf="data.animal === 'panda'">&#10003;</span> Panda
-        </li>
-        <li>
-            <span *ngIf="data.animal === 'unicorn'">&#10003;</span> Unicorn
-        </li>
-        <li>
-            <span *ngIf="data.animal === 'lion'">&#10003;</span> Lion
-        </li>
-    </ul> -->
+<h1 mat-dialog-title class="text-center">{{surdata.room.SurgeryRoom}}</h1>
+<div mat-dialog-content dir="rtl" class="text-center" style="height: 325px;">
+    מספר ניתוחים: {{surdata.room.NumberOfSurgeries}}
+    <div class="row">
+        <table class="table text-right">
+            <tr style="width: 1%;">
+                <th>שם ניתוח</th>
+                <th>זמן התחלה</th>
+                <th>זמן סיום</th>
+                <th>משך ניתוח</th>
+                <th>סטטוס</th>
+            </tr>
+            <tr *ngFor="let su of surdata.room.Surgeries" style="width: 1%;">
+                <td>{{su.SurgeryServicesName.S_SERVICE_VAL}}</td>
+                <td>{{su.ArrivalTime}}</td>
+                <td>{{su.EndTime}}</td>
+                <td>{{su.duration * 0.6 | number : '1.2-2'}}</td>
+                <td>{{su.SurgeryStatus}}</td>
+            </tr>
+        </table>
+    </div>
+    <br>
+    <br>
+</div>
+<div class="row" dir="rtl" style="display: block;text-align: right;">
+    <h4>סה"כ זמן ניתוחים: {{totalSurgeriesDuration | number : '1.2-2'}} שעות</h4>
+    <br>
+    <h4>סה"כ זמן הכנה: {{ (surdata.room.Surgeries.length * 0.2)/0.6 | number : '1.2-2'}} שעות</h4>
+    <br>
+    <h4>סה"כ זמן ניתוחים כולל זמן הכנה: {{totalSurgeriesDuration + ((surdata.room.Surgeries.length * 0.2)/0.6) | number
+        : '1.2-2'}} שעות</h4>
 </div>
