--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.css
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.css
@@ -10,20 +10,28 @@
 .add-btn:hover {
     transform: scale(1.2);
 }
-.rooms-list{
+
+.rooms-list {
     display: flex;
     margin: auto;
     list-style-type: none;
 }
-mat-spinner{
+
+mat-spinner {
     top: 50%;
     left: 50%;
     z-index: 2;
 }
-ul.list{
+
+ul.list {
     display: flex;
     column-gap: 30px;
 }
-.rooms-btn:hover{
+
+.rooms-btn:hover {
     background-color: aliceblue;
+}
+
+.rooms-btn-danger {
+    background-color: crimson;
 }
