--- a/src/app/employees-manage-dash/employees-add-update/employees-add-update.component.html
+++ b/src/app/employees-manage-dash/employees-add-update/employees-add-update.component.html
@@ -283,7 +283,7 @@
                                     </mat-select>
                                 </div>
                             </li>
-                            <li class="border-me col-3" *ngIf="managerType == 'admin' || managerType == 'hr'">
+                            <li class="border-me col-3">
                                 <div class="col-12 text-right">
                                     <label class="exp-label">מיקום עבודה</label>
                                     <mat-select formControlName="WorkPlaceID" aria-placeholder="מיקום עבודה">
