--- a/src/app/consultations/follow-up/follow-up.component.html
+++ b/src/app/consultations/follow-up/follow-up.component.html
@@ -28,7 +28,7 @@
                                     </mat-form-field>
                                 </div>
                             </div>
-                            <div class="col">
+                            <!-- <div class="col">
                                 <div class="form-group">
                                     <mat-form-field>
                                         <mat-label>מחלקה מזמינה</mat-label>
@@ -39,7 +39,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col">
                                 <div class="form-group">
                                     <mat-form-field>
@@ -131,6 +131,10 @@
                                     </div>
                                 </div>
                             </mat-list>
+                            <button mat-fab color="accent" aria-label="Excel" (click)="exportexcel()"
+                                matTooltip="יצוא לאקסל">
+                                <mat-icon>get_app</mat-icon>
+                            </button>
                         </div>
 
                         <button mat-raised-button type="submit" class="btn btn-primary btn-raised"
@@ -218,6 +222,17 @@
                                         {{ element.User.UserFirstName }} {{ element.User.UserLastName }}
                                     </td>
                                 </ng-container>
+                                <ng-container matColumnDef="Content">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        תוכן הדו"ח
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <button mat-raised-button color="primary"
+                                            (click)="openContentDialog(element.Content)">
+                                            <mat-icon>list</mat-icon>
+                                        </button>
+                                    </td>
+                                </ng-container>
                                 <!-- <ng-container matColumnDef="UserDepart">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                                         מחלקה
@@ -242,13 +257,31 @@
                             </table>
                         </div>
                         <!-- PAGINATION -->
-                        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[20, 50, 100]" [pageSize]="20"
+                        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[20, 50, 100, 500]" [pageSize]="20"
                             showFirstLastButtons (page)="getPaginatorData($event)"></mat-paginator>
                     </div>
                 </div>
             </div>
+            <table id="excel-table" dir="rtl" style="display: none;">
+                <tr>
+                    <th>מחלקה</th>
+                    <th>תאריך</th>
+                    <th>קטיגוריה</th>
+                    <th>מספר מקרה</th>
+                    <th>שם עובד</th>
+                    <th>תוכן דו"ח</th>
+                </tr>
+                <tr *ngFor="let fol of dataSource.filteredData">
+                    <td> {{fol.FollowUpDepart}} </td>
+                    <td> {{fol.FollowUpDate}} </td>
+                    <td> {{fol.FollowUpCategory}} </td>
+                    <td> {{fol.CaseNumber}} </td>
+                    <td> {{fol.Content}} </td>
+                </tr>
+            </table>
         </div>
     </mat-tab>
+
     <!-- <mat-tab label="נתונים בגרף">
         <div class="container-fluid text-right fix-google-chart-height">
             <br /><br />
