--- a/src/app/new-header/new-header.component.html
+++ b/src/app/new-header/new-header.component.html
@@ -16,6 +16,6 @@
         </div>
         
     <div id="logo">
-        <img alt="Poriya" src="assets/images/logo.png" title="Poriya" />
+        <img alt="Poriya" src="assets/images/logo.png" title="Poriya" routerLink="dashboard"/>
     </div>
 </nav>
