--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
@@ -26,6 +26,7 @@
     </div>
     <div class="col-md-4">
       <ul class="list">
+        <li style="color: #F3F5E1;">SISIA</li>
         <li style="color: #0ef12f;">Completed</li>
         <li style="color: #e8abf1;">InProgress</li>
         <li style="color: #abeff1;">Planned</li>
