--- a/src/app/consultations/follow-up/content.html
+++ b/src/app/consultations/follow-up/content.html
@@ -1,4 +1,5 @@
-<div class="row" dir="rtl">
-    <h4><b>תוכן דו"ח</b></h4>
-    <p class="text-right">{{data}}</p>
+<div class="row text-right" style="display: block;" dir="rtl">
+    <h4><b>תוכן הדו"ח</b></h4>
+    <h6><b>כותב הדו"ח: {{data.User.UserFirstName}} {{ data.User.UserLastName }}</b></h6>
+    <p class="text-right">{{data.Content}}</p>
 </div>
