--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
@@ -25,7 +25,8 @@
   </div>
   <div class="col-md-3">
     <ul class="list">
-      <li style="color: #F3F5E1;">SISIA</li>
+      <li style="color: #F1F305;">דחוף</li>
+      <li style="color: #FFA100;">ססיה</li>
       <li style="color: #0ef12f;">Completed</li>
       <li style="color: #e8abf1;">InProgress</li>
       <li style="color: #abeff1;">Planned</li>
