--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/summary-dialog.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/summary-dialog.html
@@ -11,11 +11,11 @@
                 <th>סטטוס</th>
                 <th>סוג</th>
             </tr>
-            <tr *ngFor="let su of surdata.room.Surgeries" style="width: 1%;">
+            <tr *ngFor="let su of surdata.room.newSurgeries" style="width: 1%;">
                 <td>{{su.SurgeryServicesName.S_SERVICE_VAL}}</td>
                 <td>{{su.ArrivalTime}}</td>
                 <td>{{su.EndTime}}</td>
-                <td>{{su.duration * 0.6 | number : '1.2-2'}}</td>
+                <td>{{su.duration | number : '1.2-2'}}</td>
                 <td>{{su.SurgeryStatus}}</td>
                 <td>{{su.SurgeryType}}</td>
             </tr>
@@ -27,8 +27,8 @@
 <div class="row" dir="rtl" style="display: block;text-align: right;">
     <h4>סה"כ זמן ניתוחים: {{totalSurgeriesDuration | number : '1.2-2'}} שעות</h4>
     <br>
-    <h4 *ngIf="surdata.room.Surgeries.length > 0">סה"כ זמן הכנה: {{ ((surdata.room.Surgeries.length - 1) * 0.2) /0.6 | number : '1.2-2'}} שעות</h4>
+    <h4 *ngIf="surdata.room.newSurgeries.length > 0">סה"כ זמן הכנה: {{ ((surdata.room.newSurgeries.length - 1) * 0.2) /0.6 | number : '1.2-2'}} שעות</h4>
     <br>
-    <h4>סה"כ זמן ניתוחים כולל זמן הכנה: {{totalSurgeriesDuration + ((surdata.room.Surgeries.length * 0.2)/0.6) | number
+    <h4>סה"כ זמן ניתוחים כולל זמן הכנה: {{totalSurgeriesDuration + ((surdata.room.newSurgeries.length * 0.2)/0.6) | number
         : '1.2-2'}} שעות</h4>
 </div>
