--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/summary-dialog.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/summary-dialog.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title class="text-center">{{surdata.room.SurgeryRoom}}</h1>
 <div mat-dialog-content dir="rtl" class="text-center" style="height: 325px;">
-    מספר ניתוחים: {{surdata.room.NumberOfSurgeries}}
+    מספר ניתוחים: {{surdata.room.newSurgeries.length}} (ללא דחוף וססיה)
     <div class="row">
         <table class="table text-right">
             <tr style="width: 1%;">
