calendar department filter

--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.css
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.css
@@ -38,6 +38,7 @@ ul.second-list {
     background-color: aliceblue;
 }
 .rooms-btn {
+    background-color: burlywood;
     position: fixed;
     z-index: 10;
 }
