--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="col-md-4">
     <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'he' }}</h3>
-    <button mat-raised-button style="background-color: cornflowerblue;" (click)="filterDepartment('undo')">הכל</button>
+    <button mat-raised-button style="background-color: cornflowerblue;" (click)="filterDepartment('undo')">כל המחלקות</button>
   </div>
   <div class="col-md-3">
     <ul class="list">
