--- a/src/app/consultations/follow-up/follow-up.component.html
+++ b/src/app/consultations/follow-up/follow-up.component.html
@@ -47,7 +47,7 @@
                                         <mat-select name="departsName" [(value)]="departsName" required>
                                             <mat-option *ngFor="
                                                     let depart of departsList
-                                                " [value]="depart.id">{{ depart.name }}</mat-option>
+                                                " [value]="depart">{{ depart }}</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
