--- a/src/app/quality-measures-dashboard/quality-measures-dashboard.component.html
+++ b/src/app/quality-measures-dashboard/quality-measures-dashboard.component.html
@@ -48,82 +48,91 @@
   </mat-tab-group>
 </div> -->
 
-<div class="container mt-4" dir="rtl">
-    <div class="row">
-        <div class="col-3">
-            <mat-form-field>
-                <mat-label>מתאריך</mat-label>
-                <input matInput [matDatepicker]="picker1" (focus)="picker1.open()">
-                <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-                <mat-datepicker #picker1></mat-datepicker>
-            </mat-form-field>
-        </div>
-        <div class="col-3">
-            <mat-form-field>
-                <mat-label>עד תאריך</mat-label>
-                <input matInput [matDatepicker]="picker2" (focus)="picker2.open()">
-                <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2></mat-datepicker>
-            </mat-form-field>
-        </div>
-        <div class="col-3">
-            <mat-form-field appearance="fill">
-                <mat-label>מדד</mat-label>
-                <mat-select>
-                    <mat-option value="option1">Option 1</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-        <div class="col-3">
-            <mat-form-field appearance="fill">
-                <mat-label>מחלקה</mat-label>
-                <mat-select>
-                    <mat-option value="option1">Option 1</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
+<div class="container mt-4" dir="rtl" [formGroup]="searchCard">
+  <div class="row">
+    <div class="col-3">
+      <mat-form-field>
+        <mat-label>מתאריך</mat-label>
+        <input matInput [matDatepicker]="picker1" formControlName="fromDate" (focus)="picker1.open()">
+        <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+      </mat-form-field>
     </div>
-    <div class="row">
-        <div class="col" style="display: grid;">
-            <mat-label>לפי זמנים</mat-label>
-            <mat-radio-group>
-                <mat-label>לפי שנה: </mat-label>
-                <mat-radio-button value="2023">2023</mat-radio-button>
-                <mat-radio-button value="2022">2022</mat-radio-button>
-                <mat-radio-button value="2021">2021</mat-radio-button>
-                <mat-radio-button value="2020">2020</mat-radio-button>
-            </mat-radio-group>
-            <mat-radio-group>
-                <mat-label>לפי רבעון: </mat-label>
-                <mat-radio-button value="Q1">Q1</mat-radio-button>
-                <mat-radio-button value="Q2">Q2</mat-radio-button>
-                <mat-radio-button value="Q3">Q3</mat-radio-button>
-                <mat-radio-button value="Q4">Q4</mat-radio-button>
-            </mat-radio-group>
-            <mat-radio-group>
-                <mat-label>לפי חודש: </mat-label>
-                <mat-radio-button value="1">1</mat-radio-button>
-                <mat-radio-button value="2">2</mat-radio-button>
-                <mat-radio-button value="3">3</mat-radio-button>
-                <mat-radio-button value="4">4</mat-radio-button>
-                <mat-radio-button value="5">5</mat-radio-button>
-            </mat-radio-group>
-        </div>
+    <div class="col-3">
+      <mat-form-field>
+        <mat-label>עד תאריך</mat-label>
+        <input matInput [matDatepicker]="picker2" formControlName="toDate" (focus)="picker2.open()">
+        <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2></mat-datepicker>
+      </mat-form-field>
     </div>
+    <div class="col-3">
+      <mat-form-field appearance="fill">
+        <mat-label>מדד</mat-label>
+        <mat-select formControlName="measureID">
+          <mat-option value="option1">01-16-3-04-001</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-3">
+      <mat-form-field appearance="fill">
+        <mat-label>מחלקה</mat-label>
+        <mat-select formControlName="department">
+          <mat-option value="option1">פנימית ב</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6" style="display: grid;">
+      <mat-label>לפי זמנים</mat-label>
+      <mat-radio-group formControlName="year">
+        <mat-label>לפי שנה: </mat-label>
+        <mat-radio-button value="2023">2023</mat-radio-button>
+        <mat-radio-button value="2022">2022</mat-radio-button>
+        <mat-radio-button value="2021">2021</mat-radio-button>
+        <mat-radio-button value="2020">2020</mat-radio-button>
+      </mat-radio-group>
+      <mat-radio-group formControlName="quarter">
+        <mat-label>לפי רבעון: </mat-label>
+        <mat-radio-button value="Q1">Q1</mat-radio-button>
+        <mat-radio-button value="Q2">Q2</mat-radio-button>
+        <mat-radio-button value="Q3">Q3</mat-radio-button>
+        <mat-radio-button value="Q4">Q4</mat-radio-button>
+      </mat-radio-group>
+      <mat-form-field>
+        <mat-label>לפי חודשים</mat-label>
+        <mat-select multiple formControlName="months">
+          <mat-option *ngFor="let month of monthsList" [value]="month">{{month}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-6">
+      <button mat-raised-button class="srch-btn" color="primary" (click)="searchMeasures()">חפש</button>
+    </div>
+  </div>
 </div>
 
 <div class="container mt-4" dir="rtl">
-    <mat-tab-group>
-        <mat-tab label="Table">
-            <table>
-            </table>
-        </mat-tab>
-        <mat-tab label="Charts">
-            <div>
-            </div>
-        </mat-tab>
-    </mat-tab-group>
-    <!-- <ul class="nav nav-tabs">
+  <mat-tab-group>
+    <mat-tab label="Table">
+      <table mat-table [dataSource]="data" class="mat-elevation-z8">
+        <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+          <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+          <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+      </table>
+    </mat-tab>
+    <mat-tab label="Charts">
+      <div>
+        <canvas id="myChart"></canvas>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+  <!-- <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#table">Table</a>
         </li>
